# GestBasic

./: README.md
session0/: CMakeLists.txt  diplomacy.hpp  exploreSpace.hpp  main.cpp
session1/: CMakeLists.txt  diplomacy.hpp  exploreSpace.hpp  main.cpp
session2/: CMakeLists.txt  diplomacy.hpp  exploreSpace.hpp  gift.hpp
session3/: CMakeLists.txt  main.cpp
